5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1811_2572.log
== TEST (2019-06-11 19:10:07) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
print(size(v)-npar


-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:10:11) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
print(size(v)-npar
-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:10:30) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
print(size(v)-npar
-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:10:34) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
			print(size(v)-npar
-- ERROR:
File "XXXX", line 9
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:10:45) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
			print(size(v)-npar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:14:04) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
nv = zeros(6, dtype=int)
	for i in range(size(nv)):
		nv[i] = (size(v)-npar)
print(nv)
-- ERROR:
File "XXXX", line 9
    for i in range(size(nv)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:14:14) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
nv = zeros(6, dtype=int)
for i in range(size(nv)):
	nv[i] = (size(v)-npar)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:14:22) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
nv = zeros(6, dtype=int)
for i in range(size(nv)):
	nv[i] = (size(v)-npar)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:15:06) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
nv = zeros(6, dtype=int)
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
	for i in range(size(nv)):
		nv[i] = (size(v)-npar)
print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:15:23) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
nv = zeros(6, dtype=int)
while (size(v) > 1):
	npar = 0
	for elemento in v:
		if (elemento % 2 == 0):
			npar = npar + 1	
	for i in range(size(nv)):
		nv[i] = (size(v)-npar)
	print(nv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:19:42) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	par = 0
	for i in range(size(v)):
		if i % 2 == 0:
			par = par + 1
		else:
			impar = size(v) - par
print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:20:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
while (size(v) > 1):
	par = 0
	for i in range(size(v)):
		if i % 2 == 0:
			par = par + 1
		else:
			impar = size(v) - par
	print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:07:06) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if i % 2 != 0:
		cont = cont + 1
a = zeros(i, dtype=int)
cont2 = 0
for ii in v:
	a[cont2] = ii
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:07:51) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if i % 2 != 0:
		cont = cont + 1
a = zeros(i, dtype=int)
cont2 = 0
for ii in v:
	a[cont2] = ii
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:08:12) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if i % 2 != 0:
		cont = cont + 1
a = zeros(i, dtype=int)
cont2 = 0
for ii in v:
	a[cont2] = ii
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:08:28) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if i % 2 != 0:
		cont = cont + 1
a = zeros(i, dtype=int)
cont2 = 0
for j in v:
	a[cont2] = j
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:08:35) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if i % 2 != 0:
		cont = cont + 1
a = zeros(i, dtype=int)
cont2 = 0
for j in v:
	a[cont2] = j
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:29) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for k
iin v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
cont2 = 0
for j in v:
	a[cont2] = j
	cont2 = cont2 + 1
print(a)
-- ERROR:
File "XXXX", line 4
    for k
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:39) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
cont2 = 0
for j in v:
	a[cont2] = j
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:29) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
cont2 = 0
for j in v:
	a[cont2] = j
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:50) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
cont2 = 0
for j in v:
	a[cont2] = j
	cont2 = cont2 + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:12:19) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
contt = 0
for j in v:
	a[contt] = j
	contt = contt + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:12:51) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
contt = 0
for j in v:
	if (j % 2 != 0):
		a[contt] = j
		contt = contt + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:13:02) 
-- CODE:
from numpy import*
v = array(eval(input("digite as matriculas dos alunos: ")))
cont = 0
for i in v:
	if (i % 2 != 0):
		cont = cont + 1
a = zeros(cont, dtype=int)
contt = 0
for j in v:
	if (j % 2 != 0):
		a[contt] = j
		contt = contt + 1
print(a)
-- EXECUTION TIME:
1.0727
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
